--- a/src/pages/NewEmployeePage/index.css
+++ b/src/pages/NewEmployeePage/index.css
@@ -1,7 +1,26 @@
-.title {
+.App {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.logo {
+  max-height: 150px;
+}
+
+.title,
+footer {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
+  font-size: 30px;
+  margin: 10px auto;
+  width: 50%;
+  height: auto;
+  /*background: rgba(15, 15, 15, 0.1);*/
+  backdrop-filter: blur(5px);
+  padding: 1rem 3rem;
+  border-radius: 10px;
 }
 
 .container {
@@ -9,14 +28,38 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background: rgba(15, 15, 15, 0.1);
+  border-radius: 10px;
+  margin: auto;
+  padding: 3rem;
+  width: 70%;
+  height: auto;
+  backdrop-filter: blur(5px);
+}
+
+.form {
+  height: auto;
+  width: 90%;
 }
 
 label {
-  display: block;
+  display: flex;
   margin-top: 1rem;
   margin-bottom: 10px;
 }
 
 .address {
   margin-top: 10px;
+  width: 100%;
+  padding-right: 0rem;
+}
+
+input,
+.dropdown {
+  width: 90%;
+  min-height: 1.5rem;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  padding: 0.5rem;
+  margin-bottom: 10px;
 }
