--- a/src/components/Modal/index.css
+++ b/src/components/Modal/index.css
@@ -23,7 +23,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 2rem;
   position: fixed;
   width: 80%;
   z-index: 9999;
@@ -31,13 +30,17 @@
 
 .modal-header {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
+  width: 100%;
+  border-radius: 5px;
 }
 
 .modal-title {
   font-size: 1.5rem;
   font-weight: bold;
+
+  margin: 2rem auto;
 }
 .modal-close-button {
   display: flex;
@@ -60,4 +63,18 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
+}
+
+.modal-separation-line {
+  color: "white";
+  background-color: "#000000";
+  height: 0.5;
+  border-color: "#000000";
+  width: 90%;
+  margin: 0px;
+}
+
+.modal-body-text {
+  padding: 2rem;
 }
