--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,11 @@ footer {
   backdrop-filter: blur(5px);
   padding: 1rem 3rem;
   border-radius: 10px;
+  z-index: -1;
+}
+
+footer{
+  margin-top: 5rem;
 }
 
 .button-container {
